--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "heartsignal",
-  "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
